src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CKSW_BASE__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Title__c</fullName>
        <label>Old Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <formula>If(ISBLANK(HealthCloudGA__DeceasedDate__c), 

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) , 
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR ( Birthdate ), 
YEAR (Today()) - YEAR ( Birthdate ) -1 ), 
null))+ &apos; Years &apos;, &apos;&apos;), 

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) , 
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( HealthCloudGA__DeceasedDate__c ) , DAY( HealthCloudGA__DeceasedDate__c ) ), 
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ), 
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ) -1 ), 
null))+ &apos; Years &apos;, &apos;&apos;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) , CASE(MONTH( Birthdate ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)+ &apos; &apos;+TEXT(DAY(Birthdate))+&apos;,&apos;+&apos; &apos;+TEXT(Year(Birthdate)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ConvertedReferrals__c</fullName>
        <description>Count of referrals submitted in the last 6 months by this referring practitioner that have a status of “Closed-Converted”.</description>
        <inlineHelpText>Count of referrals submitted in the last 6 months by this referring practitioner that have a status of “Closed-Converted”.</inlineHelpText>
        <label>Converted Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DeceasedDate__c</fullName>
        <description>Date of death, if applicable</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <formula>Account.HealthCloudGA__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferrerScore__c</fullName>
        <description>Integer value between 0 and 100, representing the conversion percentage (Field 2/Field 1 * 100). Rounded to the nearest whole number</description>
        <formula>IF(
AND( 
AND( 
NOT(ISNULL(HealthCloudGA__TotalReferrals__c)), 
NOT(ISNULL(HealthCloudGA__ConvertedReferrals__c)) 
),HealthCloudGA__TotalReferrals__c!=0), 
ROUND((HealthCloudGA__ConvertedReferrals__c * 100.0) / HealthCloudGA__TotalReferrals__c,0),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external Id on contacts.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TotalReferrals__c</fullName>
        <description>Count of total number of referrals submitted in the last 6 months by this referring practitioner.</description>
        <inlineHelpText>Count of total number of referrals submitted in the last 6 months by this referring practitioner.</inlineHelpText>
        <label>Total Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_TITLE__c</fullName>
        <label>ORGCUSTOM4_OLD_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Dial_Cell_Phone__c</fullName>
        <formula>IF(  MobilePhone &lt;&gt; &quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000000wHL&amp;phonenumber=&quot;&amp;  MobilePhone , IMAGE(&quot;https://service.ribbit.com/salesforce/img/callmobial.gif&quot;, &quot;Please \&quot;EJECT\&quot; the RIBBIT Phone from the sidebar prior to using One-Click calling&quot;) ,&quot;callNumber&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Dial_Phone__c</fullName>
        <description>Calls Phone number</description>
        <formula>IF( Phone   &lt;&gt; &quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000000wHL&amp;phonenumber=&quot;&amp;  Phone , IMAGE(&quot;https://service.ribbit.com/salesforce/img/callphone.gif&quot;, &quot;Please \&quot;EJECT\&quot; the RIBBIT Phone from the sidebar prior to using One-Click calling&quot;) ,&quot;callNumber&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calls Phone number</inlineHelpText>
        <label>Dial Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Message_Indicator__c</fullName>
        <label>Message Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__New_Message__c</fullName>
        <formula>IF(contains(Ribbit1__Message_Indicator__c, $User.Id), HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;?playNew=true&quot;, IMAGE(&quot;https://service.ribbit.com/salesforce/assets/msgPlayIndicator_2.png&quot;, &quot;&quot;) , &quot;_self&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aj_tstACC_business_hrs__c</fullName>
        <label>aj_tstACC business hrs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aj_tstDT__c</fullName>
        <label>aj_tstDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Represents a Business</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Represents an Individual</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>TEST_CONTACT</fullName>
        <active>true</active>
        <label>TEST CONTACT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>